reset/update mpd database and config

--- a/mpd/mpd.conf
+++ b/mpd/mpd.conf
@@ -17,8 +17,7 @@ music_directory		"~/Music"
 # playlist files not created by the server but only if they are in the MPD
 # format. This setting defaults to playlist saving being disabled.
 #
-# playlist_directory "~/.mpd/playlists"
-playlist_directory "~/.config/mpd/playlists"
+playlist_directory		"~/.config/mpd/playlists"
 #
 # This setting sets the location of the MPD database. This file is used to
 # load the database at server start up and store the database while the
@@ -26,8 +25,7 @@ playlist_directory "~/.config/mpd/playlists"
 # MPD to accept files over ipc socket (using file:// protocol) or streaming
 # files over an accepted protocol.
 #
-db_file            "~/.local/share/mpd/database"
-#db_file			"~/.mpd/database"
+db_file			"~/.config/mpd/database"
 
 # These settings are the locations for the daemon log files for the daemon.
 #
@@ -45,7 +43,7 @@ db_file            "~/.local/share/mpd/database"
 #
 # If you use systemd, do not configure a pid_file.
 #
-#pid_file			"~/.mpd/pid"
+pid_file			"~/.cache/mpd-pid"
 
 # This setting sets the location of the file which contains information about
 # most variables to get MPD back into the same general shape it was in before
@@ -53,12 +51,11 @@ db_file            "~/.local/share/mpd/database"
 # state will be reset on server start up.
 #
 #state_file			"~/.mpd/state"
-state_file			"~/.local/share/mpd/state"
 #
 # The location of the sticker database.  This is a database which
 # manages dynamic information attached to songs.
 #
-sticker_file			"~/.local/share/mpd/sticker.sql"
+#sticker_file			"~/.mpd/sticker.sql"
 #
 ###############################################################################
 
@@ -82,7 +79,7 @@ sticker_file			"~/.local/share/mpd/sticker.sql"
 # This setting sets the address for the daemon to listen on. Careful attention
 # should be paid if this is assigned to anything other than the default, any.
 # This setting can deny access to control of the daemon. Not effective if
-# systemd socket activiation is in use.
+# systemd socket activation is in use.
 #
 # For network
 #bind_to_address		"any"
@@ -93,7 +90,7 @@ sticker_file			"~/.local/share/mpd/sticker.sql"
 # This setting is the TCP port that is desired for the daemon to get assigned
 # to.
 #
-port				"6600"
+#port				"6600"
 #
 # Suppress all messages below the given threshold.  Use "verbose" for
 # troubleshooting. Available setting arguments are "notice", "info", "verbose",
@@ -104,7 +101,7 @@ port				"6600"
 # Setting "restore_paused" to "yes" puts MPD into pause mode instead
 # of starting playback after startup.
 #
-restore_paused "yes"
+#restore_paused "no"
 #
 # This setting enables MPD to create playlists in a format usable by other
 # music players.
@@ -128,7 +125,7 @@ auto_update	"yes"
 # Limit the depth of the directories being watched, 0 means only watch
 # the music directory itself.  There is no limit by default.
 #
-auto_update_depth "3"
+#auto_update_depth "3"
 #
 ###############################################################################
 
@@ -184,11 +181,11 @@ auto_update_depth "3"
 #
 #database {
 #       plugin "simple"
-#       path "~/.local/share/mpd/db
+#       path "~/.local/share/mpd/db"
 #       cache_directory "~/.local/share/mpd/cache"
 #}
 #
-# An example of database config for a sattelite setup
+# An example of database config for a satellite setup
 #
 #music_directory "nfs://fileserver.local/srv/mp3"
 #database {
@@ -288,6 +285,13 @@ input {
 #	max_clients	"0"			# optional 0=no limit
 #}
 #
+audio_output {
+        type            "pulse"
+        name            "Pulse Output"
+        mixer_control   "Master"
+}
+
+
 # An example of a pulseaudio output (streaming to a remote pulseaudio server)
 #
 #audio_output {
@@ -317,6 +321,7 @@ input {
 ##	device		"Digital Audio (S/PDIF) (High Definition Audio Device)" # optional
 #		or
 ##	device		"0"		# optional
+##	mixer_type	"hardware"	# optional
 ## Exclusive mode blocks all other audio source, and get best audio quality without resampling.
 ##	exclusive	"no"		# optional
 ## Enumerate all devices in log.
@@ -368,15 +373,7 @@ input {
 #	name		"My Null Output"
 #	mixer_type      "none"			# optional
 #}
-audio_output {
-        type            "pulse"
-        name            "pulse audio"
-}
-#audio_output {
-#        type            "pipewire"
-#        name            "PipeWire Sound Server"
-#}
-
+#
 ###############################################################################
 
 
@@ -392,31 +389,6 @@ audio_output {
 #
 #replaygain			"album"
 #
-# This setting sets the pre-amp used for files that have ReplayGain tags. By
-# default this setting is disabled.
-#
-#replaygain_preamp		"0"
-#
-# This setting sets the pre-amp used for files that do NOT have ReplayGain tags.
-# By default this setting is disabled.
-#
-#replaygain_missing_preamp	"0"
-#
-# This setting enables or disables ReplayGain limiting.
-# MPD calculates actual amplification based on the ReplayGain tags
-# and replaygain_preamp / replaygain_missing_preamp setting.
-# If replaygain_limit is enabled MPD will never amplify audio signal
-# above its original level. If replaygain_limit is disabled such amplification
-# might occur. By default this setting is enabled.
-#
-#replaygain_limit		"yes"
-#
-# This setting enables on-the-fly normalization volume adjustment. This will
-# result in the volume of all playing audio to be adjusted so the output has
-# equal "loudness". This setting is disabled by default.
-#
-#volume_normalization		"no"
-#
 ###############################################################################
 
 # Character Encoding ##########################################################
@@ -427,3 +399,4 @@ audio_output {
 #filesystem_charset		"UTF-8"
 #
 ###############################################################################
+
