mpv: add tracklist bind

--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -2,4 +2,5 @@ a     script-binding quality_menu/video_formats_toggle
 Alt+a script-binding quality_menu/audio_formats_toggle
 Space cycle pause; script-binding mfpbar/maximize
 MBTN_MID  script-binding mdmenu/tracklist
+Alt+s  script-binding mdmenu/tracklist
 Alt+c           script-binding mdmenu/chapters
