hyprland: add rsubmap for reload+resize

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -443,7 +443,7 @@ bind = $mainMod&Shift, l, movewindow,r
 
 
 # switch to reize submap
-bind = $mainMod, R, submap, resize
+# bind = $mainMod, R, submap, resize
 
 binde = $mainMod&Shift&alt, h, moveactive, -10 0
 binde = $mainMod&Shift&alt, j, moveactive, 0 10
@@ -564,12 +564,7 @@ bind = $mainMod&alt, c, exec, grim -g "$(slurp -d)" - | wl-copy
 bind = $mainMod&Shift, c, exec,grim -g "$(slurp -d)"
 #bind = $mainMod&alt, c, exec, ripdragShots $grimscreenshotdir
 
-# Gaming script and reset bind
-bind = $mainMod&control,1, exec, hyprctl reload;notify-send "reload complete!" 
-bind = $mainMod&control,2, exec, ~/.config/hypr/gamemode.sh
-bind = $mainMod&control,3, exec, hyprctl reload;pkill waybar;hyprctl dispatch exec waybar 
-bind = $mainMod&control,4, exec, pkill waybar 
-bind = $mainMod&control,5, exec, pkill -SIGUSR1 waybar 
+
 
 # screen lock
 bind = $mainMod, BackSpace, exec, $locker
@@ -621,6 +616,19 @@ bindln = , Prior, exec, if-hyprlock loginctl suspend
 ###############
 
 # See https://wiki.hyprland.org/Configuring/Binds/#submaps 
+
+# rsubmap is a submap for reloading or switching to the resize submap
+bind = $mainMod,r,submap,rsubmap
+submap = rsubmap
+bind = ,r,submap,resize
+bind = ,1, exec, hyprctl reload;notify-send "reload complete!" 
+bind = ,2, exec, ~/.config/hypr/gamemode.sh
+bind = ,3, exec, hyprctl reload;pkill waybar;hyprctl dispatch exec waybar 
+bind = ,4, exec, pkill waybar 
+bind = ,5, exec, pkill -SIGUSR1 waybar = ,1,
+bind = , catchall, submap, reset
+submap = reset
+
 bind = $mainMod, n, submap, null  
 submap = null 
 bind = $mainMod,n,submap, reset
