--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -647,6 +647,7 @@ binde = , l, resizeactive, 10 0
 
 # use reset to go back to the global submap
 bind = , escape, submap, reset
+bind = , catchall, submap, reset
 
 submap = movesilent
 
