hyprland: add waypiedock

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -116,6 +116,7 @@ exec-once = waybar
 exec-once = hyprpaper
 exec-once = hypridle
 exec-once = dunst
+exec-once = waypiedock
 # reload is here due to hyprland bug relating to plugins
 #exec-once = hyprpm reload -n 
 #&& hyprctl reload
@@ -528,6 +529,12 @@ bind = $mainMod, v, togglespecialworkspace, ncpamixer
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
+
+# bind = $mainMod, mouse:276,exec,printf DOWN > /tmp/.waypiedock.fifo
+# bind = $mainMod&SHIFT,d,exec,printf DOWN > /tmp/.waypiedock.fifo
+bind = $mainMod,TAB,exec,printf DOWN > /tmp/.waypiedock.fifo
+# bind = , mouse:275,exec,printf UP > /tmp/.waypiedock.fifo
+
 
 # disable monitor
 #bind = $mainMod, grave,exec,~/.config/hypr/monitor_disable.sh $secondmonitor
