--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -412,8 +412,8 @@ bind=$mainMod&shift,F,exec, hyprctl --batch "dispatch setfloating ; dispatch ful
 
 bind=$mainMod,z,pin,active
 
-bind=$mainMod,Tab,changegroupactive,f
-bind=$mainModShift,Tab,changegroupactive,b
+# bind=$mainMod,Tab,changegroupactive,f
+# bind=$mainModShift,Tab,changegroupactive,b
 
 #bind = $mainMod, P, pseudo, # dwindle
 #bind = $mainMod, J, togglesplit, # dwindle
