hyprland: add waypie dock binds

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -754,6 +754,17 @@ windowrulev2 = float, class:(org.gnome.Calculator)
 #windowrulev2 = plugin:invertwindow,class:(firefox)
 windowrulev2 = size >30% >30%, class:Zenity
 
+windowrulev2 = tag piedock,class:com.gitlab.Arnaudv6.WayPieDock
+# windowrulev2 = nomaxsize, class:com.gitlab.Arnaudv6.WayPieDock
+# windowrulev2 = size 1000 1000, class:com.gitlab.Arnaudv6.WayPieDock
+windowrulev2 = move onscreen cursor -50% -50%, class:com.gitlab.Arnaudv6.WayPieDock
+windowrulev2 = noblur, tag:piedock
+windowrulev2 = noborder, tag:piedock 
+windowrulev2 = pin, tag:piedock 
+windowrulev2 = noshadow, tag:piedock 
+windowrulev2 = noanim, tag:piedock 
+
+
 #############################
 ### SCRATCHPAD WORKSPACES ###
 #############################
