--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -312,8 +312,10 @@ misc {
 $kbLayout = us_zuki
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout = $kbLayout # ,gb
+    kb_layout = $kbLayout
     kb_variant =
+    # kb_layout = $kbLayout ,us
+    # kb_variant = ,workman
     kb_model =
     # kb_options sets xorg style keymap options 
     # sources:
@@ -326,6 +328,7 @@ input {
     # ctrl:nocaps makes capslock into a second control key
     #
     kb_options = ctrl:nocaps, lv3:ralt_switch, eurosign:5 #grp:alt_shift_toggle
+    # kb_options = grp:win_space_toggle
     kb_rules =
 
     follow_mouse = 1
