kitty: revert scrollmod

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -254,7 +254,7 @@ scrollback_pager_history_size 40
 #: scrolling on platforms such as macOS and Wayland. Use negative
 #: numbers to change scroll direction.
 
-touch_scroll_multiplier 5.0
+# touch_scroll_multiplier 5.0
 # weird issue were this value is used sometimes in guix kitty
 # when just using a normal mouse weird.
 
