pipewire&nixos: switch rnoise plugin to nixpath

--- a/pipewire/pipewire.conf.d/99-input-denoising.conf
+++ b/pipewire/pipewire.conf.d/99-input-denoising.conf
@@ -8,7 +8,8 @@ context.modules = [
                 {
                     type = ladspa
                     name = rnnoise
-                    plugin = /usr/lib64/ladspa/librnnoise_ladspa.so
+                    plugin = /nix/store/il3941kmibbxlbh03yq0ya0kh9dqdkdw-rnnoise-plugin-1.10/lib/ladspa/librnnoise_ladspa.so
+                    # plugin = librnnoise_ladspa.so
                     label = noise_suppressor_mono
                     control = {
                         "VAD Threshold (%)" = 60.0
