mpv/script-opts/mdmenu.conf: switch to fuzzel

--- a/mpv/script-opts/mdmenu.conf
+++ b/mpv/script-opts/mdmenu.conf
@@ -12,5 +12,5 @@ preselect=no
 # arguments are comma separated.
 #cmd=dmenu,-i,-l,16
 #cmd=bemenu,-i,-l,1h6,-c,-l,10,-W,0.15,-B,4
-cmd=bemenu
-#cmd=fuzzel,-d
+# cmd=bemenu
+cmd=fuzzel,-d
