kanshi&river&nixos: switch from wlr-randr to kanshi

--- a/kanshi/config
+++ b/kanshi/config
@@ -1,7 +1,14 @@
 profile {
-	output DP-1 enable mode 1920x1080@164.917 position 0,0
-	output HDMI-A-1 enable mode 1920x1080 position 1920,0
+    output "Microstep MSI G272CQP 0x0000005D" {
+        mode 2560x1440@164.938004
+        position 1920,0
+    }
+    output "\*" position 0,0
+    exec xrandr_primary 
 }
 profile {
-	output DP-1 enable mode 1920x1080@164.917 position 0,0
+    output "Microstep MSI G272CQP 0x0000005D" {
+        mode 2560x1440@164.938004
+        position 0,0
+    }
 }
