--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -14,3 +14,7 @@ bind r source-file ~/.config/tmux/tmux.conf
 # enable mouse scrolling
 set -g mouse on
 
+set -g @mighty-scroll-by-line 'nix-search less fzf pager'
+# enable better mouse mode
+run '~/.config/tmux/plugins/tmux-mighty-scroll/mighty-scroll.tmux'
+# run-shell ~/.config/tmux/plugins/tmux-better-mouse-mode/scroll_copy_mode.tmux
