tmux: fix scrolling with lazygit

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -15,6 +15,7 @@ bind r source-file ~/.config/tmux/tmux.conf
 set -g mouse on
 
 set -g @mighty-scroll-by-line 'nix-search less fzf pager'
+set -g @mighty-scroll-pass-through 'vim nvim lazygit'
 # enable better mouse mode
 run '~/.config/tmux/plugins/tmux-mighty-scroll/mighty-scroll.tmux'
 # run-shell ~/.config/tmux/plugins/tmux-better-mouse-mode/scroll_copy_mode.tmux
