--- a/sway/config
+++ b/sway/config
@@ -1,62 +1,12 @@
-set $ipctool swaymsg
-#DISPLAY VAR
-set $mainmon DP-1
-set $secmon HDMI-A-1
-set $togglemonsyntax output $secmon toggle
-#DISPLAY + WALLPAPER
-#output $mainmon mode 2560x1440 position 0,0
-#output $mainmon  mode 2560x1440@160Hz position 0,0
-output $mainmon  mode 2560x1440@164.938Hz position 0,0
-output $secmon resolution 1920x1080 position 2560,0
-output * bg  #1E242D solid_color
-#INPUT
-input * {
-    xkb_layout "gb"
-}
-
-input <identifier> xkb_model "pc101"
 seat * xcursor_theme default 30
 
-
-set $zukice exec zswayice
-
-#LOCKSYNTAX
-set $locksyntax --locked
-set $secmontoggle output $secmon toggle
-
-
-
-
-
-
-include ~/.config/i3sway/config
-
-
-#
-# Screen capture (source https://www.reddit.com/r/swaywm/comments/pdyx0w/comment/hau6yck/?utm_source=share&utm_medium=web2x&context=3)
-#
-set $screenshot 1 selected, 2 whole, 3 selected clipboard, 4 whole clipboard, 5 swappy
-mode "$screenshot" {
-    bindsym 1 exec 'grim -g "$(slurp)" ~/screenshot/ps_$(date +"%Y%m%d%H%M%S").png', mode "default"
-    bindsym 2 exec 'grim ~/screenshot/ps_$(date +"%Y%m%d%H%M%S").png', mode "default"
-    bindsym 3 exec 'grim -g "$(slurp)" - | wl-copy', mode "default"
-    bindsym 4 exec 'grim - | wl-copy', mode "default"
-    bindsym 5 exec 'grim -g "$(slurp)" - | swappy -f -', mode "default"
-    bindsym 6 exec 'ripdrag ~/screenshot/ps_*', mode "default"
-
-# back to normal: Enter or Escape
-    bindsym Return mode "default"
-    bindsym Escape mode "default"
-    bindsym $mod+Print mode "default"
-}
-
-floating_modifier $mod normal
-
-for_window [app_id="^chrome-.*"] shortcuts_inhibitor disable
-for_window [app_id="^chromium"] shortcuts_inhibitor disable
-
-
-exec wl-paste --primary --watch wl-copy --primary --clear
-exec systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec_always $XDG_CONFIG_HOME/sway/init
+exec kanshi
+exec hyprpaper
+exec foot --server
+exec gammastep
+exec swayidle
+exec spirefix
 exec dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-include /etc/sway/config.d/*
+exec systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec_always kill -1 $(pidof kanshi)
