waybar: add niri workspaces

--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -11,6 +11,7 @@
         // "river/layout",
         "hyprland/workspaces",
         "hyprland/submap",
+        "niri/workspaces",
     //    "hyprland/scratchpad",
         "custom/media"
     ],
