nixos: get hyprland plugin loading working without home manager

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -330,3 +330,4 @@ windowrulev2 = noshadow, focus:0
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+source = /etc/xdg/hypr/hyprland.conf 
