hypr: add kanshi and gammastep to startup

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -48,6 +48,8 @@ $menu = fuzzel
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
+exec-once = gammastep
+exec-once = kanshi
 exec-once = waybar
 exec-once = hyprpaper
 exec-once = foot --server
