--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -238,7 +238,7 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Return, exec, $terminal
+bind = $mainMod, Return, exec, $terminal tmux
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, V, togglefloating,
