--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -240,7 +240,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Return, exec, $terminal tmux
 bind = $mainMod, Q, killactive,
-bind = $mainMod, M, exit,
+bind = $mainMod Shift, Q, exit,
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
