hypr: add window rule to invert google docs and google sheets when i have to use them

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -330,6 +330,12 @@ windowrule = suppressevent maximize, class:.*
 
 windowrulev2 = noshadow, focus:0
 
+#windowrulev2 = plugin:invertwindow,title:(.*:: https://docs.google.com/spreadsheets/.* — Mozilla Firefox.*),class:(firefox)
+#windowrulev2 = plugin:invertwindow,title:(.*:: https://docs.google.com/spreadsheets/.* — Mozilla Firefox.*),class:(firefox)
+#windowrulev2 = plugin:invertwindow,title:(.*:: https://docs.google.com/spreadsheets/.* — Mozilla Firefox.*),class:(firefox)
+windowrulev2 = plugin:invertwindow,title:(.*Google Sheets — Mozilla Firefox.*),class:(firefox)
+windowrulev2 = plugin:invertwindow,title:(.*Google Docs — Mozilla Firefox.*),class:(firefox)
+
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 source = /etc/xdg/hypr/hyprland.conf 
