--- a/scroll/config
+++ b/scroll/config
@@ -113,6 +113,8 @@ bindsym $mod+Shift+0 move container to workspace number 10
 #* startup
 
 exec foot --server
+exec systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec hyprpaper
 exec kanshi
 exec_always kill -1 $(pidof kanshi)
