--- a/scroll/config
+++ b/scroll/config
@@ -109,6 +109,11 @@ bindsym $mod+Shift+j move down
 bindsym $mod+Shift+k move up
 bindsym $mod+Shift+l move right
 
+bindsym $mod+Alt+h move left  nomode 
+bindsym $mod+Alt+j move down  nomode 
+bindsym $mod+Alt+k move up    nomode 
+bindsym $mod+Alt+l move right nomode 
+
 bindsym --no-repeat $mod+slash jump
 
 # workspace binds
