scroll: add fit size hori bind(will probably remove later)

--- a/scroll/config
+++ b/scroll/config
@@ -61,6 +61,7 @@ bindsym $mod+v set_mode v
 bindsym $mod+c set_mode h
 
 bindsym $mod+y fit_size v all equal
+bindsym $mod+w fit_size h all equal
 
 bindsym $mod+p pin end
 bindsym $mod+Shift+p pin beginning
