scroll: add floating and sticky binds

--- a/scroll/config
+++ b/scroll/config
@@ -32,6 +32,11 @@ bindsym $mod+d exec fuzzel
 bindsym $mod+q kill
 bindsym $mod+r reload
 
+bindsym $mod+a floating toggle
+
+bindsym $mod+z sticky toggle
+
+
 mode "selection" {
 
 bindsym s selection toggle
