--- a/scroll/config
+++ b/scroll/config
@@ -2,6 +2,7 @@
 #* built in vars
 seat * xcursor_theme default 30
 default_border pixel 3
+default_floating_border pixel 3
 gaps inner 8
 gaps outer 12
 
