scroll: add center command

--- a/scroll/config
+++ b/scroll/config
@@ -38,6 +38,7 @@ bindsym $mod+a floating toggle
 
 bindsym $mod+z sticky toggle
 
+bindsym $mod+c move position center
 
 mode "selection" {
 
@@ -65,7 +66,7 @@ bindsym $mod+s mode selection
 
 # switch to diffrent modes
 bindsym $mod+v set_mode v
-bindsym $mod+c set_mode h
+bindsym $mod+b set_mode h
 
 bindsym $mod+y fit_size v all equal
 bindsym $mod+w fit_size h all equal
