--- a/scroll/config
+++ b/scroll/config
@@ -6,10 +6,12 @@ default_floating_border pixel 3
 gaps inner 8
 gaps outer 12
 
+
+
 # colors
 set $bg #373b41
-#set $bg #280040
-set $bg #00000000
+set $bg #280040
+# set $bg #00000000
 set $br #4b576f
 set $br #6040a0
 set $fg #000000
