--- a/swayidle/config
+++ b/swayidle/config
@@ -1,3 +1,3 @@
 timeout 300 'swaylock -f -i ~/.config/wallpaper'
 # timeout 600 'systemctl suspend'
-before-sleep 'swaylock -f -i ~/.config/wallpaper' 
+# before-sleep 'swaylock -f -i ~/.config/wallpaper' 
