--- a/scroll/config
+++ b/scroll/config
@@ -51,7 +51,7 @@ floating_modifier $mod
 bindsym $mod+Return exec $term tmux
 bindsym $mod+d exec fuzzel
 bindsym $mod+q kill
-bindsym $mod+r reload
+bindsym $mod+Shift+r reload
 
 bindsym $mod+f fullscreen
 
